2005-05-18  Zack Weinberg  <zack@codesourcery.com>

	* qm/test/database.py (ItemDescriptor._Execute): Use getattr
	and a bound method object instead of eval.

2005-05-03  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/report.py: Add ReportGenerator module.
	* qm/test/cmdline.py: Add 'report' command.

2005-04-15  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/classes/compiler.py: Add support for new 'ldflags' parameter.
	* qm/test/classes/compiler_table.py: Likewise.

2005-04-14  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/classes/compiler.py: Moved over extension from qmtc.
	* qm/test/classes/compiler_table.py: Likewise.
	* qm/test/classes/compiler_test.py: Likewise.
	* qm/test/classes/classes.qmc: Registered 'CompilerTable' resource.

2005-03-31  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/extension.py: Fix omission (see entry from 2005-03-24).

2005-03-29  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/parameter_database.py: New file.

2005-03-24  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/extension.py: Enhance the detection of argument name collision.
	* Makefile: Removed.
	* configure.in: Removed.
	* configure: Removed.

2005-03-21  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/extension.py: Use metaclass to manipulate 'Field' members.
	* qm/fields.py: Make fields more convenient to use in the context of
	Extensions.
	* tests/xmldb/api.xms/test.qms/fields.qmt: New unit test for this feature.
	* tests/xmldb/QMTest/test_inheritance.py: Adjust test to new
	feature.
	* qm/test/classes/python.py: Work around a python bug.

	* qm/test/classes/command.py: Generalize ExecTestBase's output
	validation.

2005-03-20  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/classes/xml_database.py: Fix ExplicitSuite constructor call.
	* tests/regress/QMTest/selftest.py: Allow an 'ids' file to specify test
	and suite ids to be specified to be used in the 'qmtest run' command.